--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "license": "MIT",
   "dependencies": {
     "all-the-german-words": "^1.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mkretz/caesar.git"
   }
 }
